--- a/passkey.html
+++ b/passkey.html
@@ -140,7 +140,7 @@
   .btn {
     margin:20px auto 0;
     display:inline-block;
-    background:#fff;
+    background:green;
     border-radius:10px;
     padding:12px 26px;
     font-weight:700;
@@ -148,19 +148,19 @@
     box-shadow: 0 6px 18px rgba(0,0,0,0.12);
     border:0;
     cursor:pointer;
-    color: #333;
+    color: black;
     transition: all 0.3s ease;
     position: relative;
     min-width: 140px;
   }
   .btn:hover:not([disabled]) {
     background: var(--accent);
-    color: white;
+    background: white;
   }
   .btn[disabled]{
     opacity:0.45;
     cursor:not-allowed;
-    background:#fff;
+    background:white;
     color: #333;
   }
 
@@ -352,7 +352,7 @@
   </div>
 
   <!-- WhatsApp Contact Button -->
-  <a href="https://wa.me/1234567890?text=Hello%20Aviator%20Support,%20I%20need%20help%20with%20my%20App%20ID" 
+  <a href="https://wa.link/qpp63a" 
      class="whatsapp-btn" 
      target="_blank" 
      rel="noopener noreferrer"
@@ -390,7 +390,7 @@
   const redirectUrl = "dashboard.html";
   
   // WhatsApp number for contact (update with your actual number)
-  const whatsappNumber = "+255786905899"; // Replace with your actual WhatsApp number
+  const whatsappNumber = "+255615180597"; // Replace with your actual WhatsApp number
 
   // ===== END CONFIGURATION =====
 
@@ -404,7 +404,7 @@
   const loadingOverlay = document.getElementById('loadingOverlay');
 
   // Update WhatsApp href with configured number
-  whatsappBtn.href = `https://wa.me/${whatsappNumber}?text=Hello%20Aviator%20Support,%20Nawezaje%20kulipia%20niweze%20kupata%20App%20ID`;
+  whatsappBtn.href = `https://wa.me/${whatsappNumber}?text=Hello%20Aviator%20Support,%20How%20can i pay%20inorder%20to Get%20App%20ID`;
 
   // Helper: set error text
   function showError(text) {
