--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
         }
         
         body {
-            background-image: url("images/background.gif");
+            background-image:linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -135,7 +135,7 @@
         }
         
         .loading-content {
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
+            background: linear-gradient(135deg, #b21f1f, #2a5298);
             padding: 30px;
             border-radius: 20px;
             text-align: center;
