--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
         
         body {
-            background-image: url("images/background.gif");
+            background-image:linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
