--- a/passkey.html
+++ b/passkey.html
@@ -196,8 +196,8 @@ body {
         </p>
 
         <p>
-            Lipa kwenda M-Pesa Namba<br>
-            <strong>0743871339</strong>
+            Lipa kwenda M-Pesa Namba<br>0743871339</br>
+</strong>
         </p>
 
         <p>
@@ -206,7 +206,7 @@ body {
         </p>
 
         <button class="whatsapp-btn"
-            onclick="window.open('https://wa.me/255615180597','_blank')">
+            onclick="window.open('https://wa.me/255652048044','_blank')">
             💬 CHAT ON WHATSAPP
         </button>
     </div>
